--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,6 @@
+<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+
 <!doctype html>
 <html lang="en">
 <head>
