--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PortfolioNG2024</title>
+  <title>~ Marwin RODRIGUES ~</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
