feat: Add MetaDescription

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <title>~ Marwin RODRIGUES ~</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Marwin RODRIGUES | WebMaster Junior" content="Fraichement Diplômé d’un BUT MMI à MMI Montbéliard , je possède une expertise en développement web, communication digital & print, UX/UI, et programmation de jeux vidéo. Déterminé à évoluer en tant que développeur front-end, mon objectif est d'atteindre le poste de directeur de projet web. Motivé et prêt à contribuer à des projets web de haut niveau.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
